--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ favicon: /favicon.ico
 # Keywords of your site | 网站关键字
 keywords: CFD,NN,POETRY
 # Head headline | 头部标题
-header_title: MinHow's Blog
+header_title: timelyrain's Blog
 # Head description | 头部描述
 header_description: 一个非典型技术博客
 # Link to your logo | logo地址
@@ -41,7 +41,7 @@ menu:
 #    target: true         Whether to jump out | 是否跳出
 social:
   home:
-    title: MinHow
+    title: timelyrain
     url: 
     target: true
   github:
